Fix crash in theme code when loading engines in succession

Store global engine specific themes as dynamic properties on the
engines themselves. This avoids the problem that storing engines
and their themes to a hash map had that destroyed engines and themes
were not cleaned up from the hash map.

Change-Id: I7330995339c263d456f74d33f6535d5ac7d9d5d4
Task-number: QTBUG-48651
Reviewed-by: Mitch Curtis <mitch.curtis@theqtcompany.com>
Reviewed-by: Liang Qi <liang.qi@theqtcompany.com>